changed reference to remotely hosted JS file that had been removed

--- a/index.html
+++ b/index.html
@@ -66,7 +66,8 @@ http://www.templatemo.com/tm-401-sprint
     <script src="https://cdn.firebase.com/libs/angularfire/1.1.3/angularfire.min.js"></script>
     
     <!-- social sharing scripts -->
-    <script src="http://720kb.github.io/angular-socialshare/assets/ext/dist/angular-socialshare.min.js"></script>
+    <!-- <script src="http://720kb.github.io/angular-socialshare/assets/ext/dist/angular-socialshare.min.js"></script>-->
+    <script src="js/angular-socialshare.min.js"></script>
     
     <!-- Angular notification script and style-->
     <link rel="stylesheet" href="//cdn.jsdelivr.net/angular.ng-notify/0.6.0/ng-notify.min.css">
